--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,13 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    testCompile 'junit:junit:4.12'
+    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.3.1'
+//    roboelectric?
+
+    //          TODO: clean
+//    compile "com.android.support:cardview-v7:23.1.1"
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     compile 'com.squareup.okhttp:okhttp:2.2.0'
     compile 'com.android.support:support-v4:23.1.1'
@@ -44,12 +51,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.commonsware.cwac:wakeful:1.0.+'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.5.1'
-    compile 'com.fasterxml.jackson.core:jackson-core:2.5.1'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.5.1'
-
-//    from futurice
-    testCompile 'junit:junit:4.12'
-    //          TODO: clean
-//    compile "com.android.support:cardview-v7:23.1.1"
+//    compile 'com.fasterxml.jackson.core:jackson-databind:2.7.1'
+//    compile 'com.fasterxml.jackson.core:jackson-core:2.7.1'
+//    compile 'com.fasterxml.jackson.core:jackson-annotations:2.7.1'
+    compile 'com.android.support:design:23.1.1'
 }
