--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,51 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.teamagam.gimelgimel">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- todo: clean-->
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
+        android:name=".app.GGApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".app.view.LauncherActivity"
+            android:label="@string/activity_launcher_title">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".app.view.MainActivity"
+            android:label="@string/activity_main_title" />
+        <activity
             android:name=".app.view.settings.SettingsActivity"
-            android:label="@string/title_activity_settings"></activity>
+            android:label="@string/title_activity_settings" />
+        <activity
+            android:name=".app.view.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:parentActivityName=".app.view.LauncherActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.teamagam.gimelgimel.app.view.LauncherActivity" />
+        </activity>
+        <service
+            android:name=".app.network.services.GGService"
+            android:exported="false" >
+        </service>
+        <!-- todo: add provider -->
+
     </application>
 
 </manifest>
