.gitignore edited: ignores all .idea directory

--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,8 @@ proguard/
 captures/
 
 
-.idea/workspace.xml
-.idea/libraries
-.DS_Store
+# Android Studio IDE files
+.idea
 
 /build
 # Gradle files
