--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,6 @@ repositories {
         url "https://s3.amazonaws.com/repo.commonsware.com"
         dependencies {
             compile fileTree(dir: 'libs', include: ['*.jar'])
-
             testCompile 'junit:junit:4.12'
             androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.3.1'
 //    roboelectric?
@@ -43,13 +42,15 @@ repositories {
 //    compile "com.android.support:cardview-v7:23.1.1"
             compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
             compile 'com.squareup.okhttp:okhttp:2.2.0'
-            compile 'com.android.support:support-v4:23.1.1'
             compile 'com.android.support:appcompat-v7:23.1.1'
             compile 'com.android.support:recyclerview-v7:23.1.1'
             compile 'com.squareup.retrofit:retrofit:1.9.0'
             compile 'com.commonsware.cwac:wakeful:1.0.+'
             compile 'com.android.support:design:23.1.1'
             compile 'com.google.code.gson:gson:2.6.2'
+
+//            compile 'org.apache.commons:commons-lang3:3.4'
+
 //            compile 'com.fasterxml.jackson.core:jackson-core:2.7.0'
 //            compile 'com.fasterxml.jackson.core:jackson-annotations:2.7.0'
 //            compile 'com.fasterxml.jackson.core:jackson-databind:2.7.0'
