finished basic navigation drawer (image + text)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,6 @@ repositories {
 //            compile 'com.fasterxml.jackson.core:jackson-databind:2.7.0'
         }
     }
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
 
