--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -35,6 +36,7 @@ repositories {
         dependencies {
             compile fileTree(dir: 'libs', include: ['*.jar'])
             testCompile 'junit:junit:4.12'
+            testCompile "org.robolectric:robolectric:3.0"
             androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.3.1'
 
             compile 'com.android.support:appcompat-v7:23.1.1'
@@ -50,6 +52,12 @@ repositories {
             compile 'com.squareup.okhttp3:okhttp:3.1.2'
 
             compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+
+            /* Dagger 2 */
+            // apt command comes from the android-apt plugin
+            apt 'com.google.dagger:dagger-compiler:2.2'
+            compile 'com.google.dagger:dagger:2.2'
+            provided 'javax.annotation:jsr250-api:1.0'
 
         }
     }
