--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ repositories {
             compile fileTree(dir: 'libs', include: ['*.jar'])
             testCompile 'junit:junit:4.12'
             testCompile "org.robolectric:robolectric:3.0"
+            testCompile "org.mockito:mockito-core:1.+"
+            testCompile "org.hamcrest:hamcrest-junit:2.+"
             androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.3.1'
 
             compile 'com.android.support:appcompat-v7:23.1.1'
