--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
         </activity>
 
         <service
-            android:name=".app.network.services.GGMessagePollingService"
+            android:name=".app.network.services.GGMessageLongPollingService"
             android:exported="false">
         </service>
     </application>
