--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,10 @@ repositories {
             compile 'com.squareup.retrofit2:retrofit:2.0.0'
             compile 'com.squareup.retrofit2:converter-gson:2.0.0'
             compile 'com.squareup.okhttp3:okhttp:3.1.2'
-
             compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+
+            compile 'com.jakewharton:butterknife:8.0.1'
+            apt 'com.jakewharton:butterknife-compiler:8.0.1'
 
             /* Dagger 2 */
             // apt command comes from the android-apt plugin
@@ -64,4 +66,8 @@ repositories {
         }
     }
 }
+dependencies {
+    compile 'org.jetbrains:annotations-java5:15.0'
+}
+
 
