--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
     <uses-permission android:name="android.permission.READ_PROFILE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
+    <uses-feature android:name="android.hardware.camera"
+                  android:required="true" />
+
     <application
         android:name=".app.GGApplication"
         android:allowBackup="true"
