--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ repositories {
             compile 'com.google.dagger:dagger:2.2'
             provided 'javax.annotation:jsr250-api:1.0'
 
+            /* Fresco by Facebook */
+            compile 'com.facebook.fresco:fresco:0.10.0'
+            compile 'com.facebook.fresco:animated-gif:0.10.0'
         }
     }
 }
