--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,10 @@ repositories {
             /* Fresco by Facebook */
             compile 'com.facebook.fresco:fresco:0.10.0'
             compile 'com.facebook.fresco:animated-gif:0.10.0'
+
+            /* Butterknife */
+            compile 'com.jakewharton:butterknife:8.0.1'
+            apt 'com.jakewharton:butterknife-compiler:8.0.1'
         }
     }
 }
