added service to handle image upload (and in the future image processing)
PointGeometry implements Parcelable now.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,10 @@
             android:name=".app.network.services.GGService"
             android:exported="false">
         </service>
+        <service
+            android:name=".app.network.services.GGImageService"
+            android:exported="false"/>
+
 
         <activity
             android:name=".app.view.FriendsActivity"
