--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,9 @@ repositories {
             /* Butterknife */
             compile 'com.jakewharton:butterknife:8.0.1'
             apt 'com.jakewharton:butterknife-compiler:8.0.1'
+
+            compile 'com.facebook.stetho:stetho:1.3.1'
+            compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
         }
     }
 }
