--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,9 @@ android {
         debug {
             signingConfig signingConfigs.debug
             applicationIdSuffix ".debug"
+
+            // Run code coverage reports by default on debug builds.
+            testCoverageEnabled = true
         }
     }
 }
@@ -70,9 +73,7 @@ repositories {
             /* Butterknife */
             compile 'com.jakewharton:butterknife:8.0.1'
             apt 'com.jakewharton:butterknife-compiler:8.0.1'
-
-            compile 'com.facebook.stetho:stetho:1.3.1'
-            compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+            
         }
     }
 }
