--- a/circle.yml
+++ b/circle.yml
@@ -2,21 +2,33 @@
 # Build configuration for Circle CI
 #
 
-general:
-    artifacts:
-        - /home/ubuntu/your-app-name/app/build/outputs/apk/
+#general:
+#    artifacts:
+#        - /home/ubuntu/your-app-name/app/build/outputs/apk/
 
 machine:
-    environment:
-        ANDROID_HOME: /usr/local/android-sdk-linux
+   environment:
+     ANDROID_HOME: /usr/local/android-sdk-linux
 
 dependencies:
-    override:
-        - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-21.1.2,android-21,extra-google-m2repository,extra-google-google_play_services,extra-android-support
-        - chmod +x gradlew
-        - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
+  pre:
+    - touch app/google-services.json
+    - echo $GOOGLE_SERVICES_JSON > app/google-services.json
+    - echo y | android update sdk --no-ui --all --filter "tools,platform-tools,android-23"
+    - echo y | android update sdk --no-ui --all --filter "build-tools-23.0.2"
 
 test:
-    override:
-        - (./gradlew assemble):
-            timeout: 360
+  override:
+    - ./gradlew createMockDebugCoverageReport
+    - ./gradlew test
+
+  post:
+    - cp -r app/build/outputs $CIRCLE_ARTIFACTS
+    - cp -r app/build/outputs/androidTest-results/ $CIRCLE_TEST_REPORTS
+    - cp -r app/build/reports/coverage/ $CIRCLE_TEST_REPORTS
+    - cp -r app/build/test-results/mockDebug/ $CIRCLE_TEST_REPORTS
+
+#test:
+#    override:
+#        - (./gradlew assemble):
+#            timeout: 360
