--- a/circle.yml
+++ b/circle.yml
@@ -12,14 +12,13 @@ machine:
 
 dependencies:
   pre:
-    - touch app/google-services.json
-    - echo $GOOGLE_SERVICES_JSON > app/google-services.json
     - echo y | android update sdk --no-ui --all --filter "tools,platform-tools,android-23"
     - echo y | android update sdk --no-ui --all --filter "build-tools-23.0.2"
 
 test:
   override:
-    - ./gradlew createMockDebugCoverageReport
+#    - ./gradlew createMockDebugCoverageReport
+    - ./gradlew assembleDebug
     - ./gradlew test
 
   post:
