--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,7 @@ machine:
 
 dependencies:
   pre:
+    - chmod +x gradlew
     - echo y | android update sdk --no-ui --all --filter "tools,platform-tools,android-23"
     - echo y | android update sdk --no-ui --all --filter "build-tools-23.0.2"
 
