--- a/circle.yml
+++ b/circle.yml
@@ -23,8 +23,10 @@ test:
     - ./gradlew test
 
   post:
+    - mkdir -p app/build/reports/coverage/
+    - mkdir -p app/build/test-results/mockDebug/
     - cp -r app/build/outputs $CIRCLE_ARTIFACTS
-    - cp -r app/build/outputs/androidTest-results/ $CIRCLE_TEST_REPORTS
+#    - cp -r app/build/outputs/androidTest-results/ $CIRCLE_TEST_REPORTS
     - cp -r app/build/reports/coverage/ $CIRCLE_TEST_REPORTS
     - cp -r app/build/test-results/mockDebug/ $CIRCLE_TEST_REPORTS
 
