--- a/circle.yml
+++ b/circle.yml
@@ -18,7 +18,7 @@ dependencies:
 
 test:
   override:
-#    - ./gradlew createMockDebugCoverageReport
+    - ./gradlew createMockDebugCoverageReport
     - ./gradlew assembleDebug
     - ./gradlew test
 
