--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,3 +78,12 @@ repositories {
         }
     }
 }
+
+android {
+// Always show the result of every unit test, even if it passes.
+    testOptions.unitTests.all {
+        testLogging {
+            events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+        }
+    }
+}
