--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.GimelGimel">
         <activity
             android:name=".app.view.LauncherActivity"
             android:label="@string/activity_launcher_title">
@@ -41,7 +41,8 @@
             android:configChanges="orientation|screenSize"/>
         <activity
             android:name=".app.view.settings.SettingsActivity"
-            android:label="@string/activity_settings_title"/>
+            android:label="@string/activity_settings_title"
+            android:theme="@style/Theme.GimelGimel.WithActionBar"/>
         <activity
             android:name=".app.view.LoginActivity"
             android:label="@string/title_activity_login"
