basic cross-walk works woth 32-bit lib.
CesiumMapView extends XWalkView.

- dynamic view inflation (not via xml)
- bridge with JS does not work yet.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,13 @@ repositories {
     }
 }
 
+dependencies {
+    compile project(':xwalk_core_library')
+    compile files('libs/xwalk_app_runtime_java.jar')
+//    compile project(':xwalk_core_library_32')
+//    compile files('libs/xwalk_app_runtime_java_32.jar')
+}
+
 android {
 // Always show the result of every unit test, even if it passes.
     testOptions.unitTests.all {
