--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,13 @@
     <uses-permission android:name="android.permission.READ_PROFILE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
-    <uses-feature android:name="android.hardware.camera"
-                  android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true"/>
 
     <application
         android:name=".app.GGApplication"
@@ -37,8 +38,8 @@
         </activity>
         <activity
             android:name=".app.view.MainActivity"
-            android:label="@string/activity_main_title"
-            android:configChanges="orientation|screenSize"/>
+            android:configChanges="orientation|screenSize"
+            android:label="@string/activity_main_title"/>
         <activity
             android:name=".app.view.settings.SettingsActivity"
             android:label="@string/activity_settings_title"/>
@@ -69,14 +70,9 @@
                 android:value="com.teamagam.gimelgimel.app.view.MainActivity"/>
         </activity>
 
-        <service
-            android:name="com.teamagam.gimelgimel.app.network.services.GGMessageLongPollingService"
-            android:exported="false">
-        </service>
-
-        <receiver android:name=".app.network.receivers.NetworkChangeReceiver" >
+        <receiver android:name=".app.network.receivers.NetworkChangeReceiver">
             <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
             </intent-filter>
         </receiver>
     </application>
