Changed the layout of the recycler view list items.
ConstraintLayout has been added, every Adnroid Studio should install it before compiling.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ repositories {
 
             compile 'org.jetbrains:annotations-java5:15.0'
 
+            compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha4'
         }
     }
 }
