Registered NetworkChangedReceiver dynamically instead of statically (through manifest). Used a dedicated thread for it to run on instead of UI(Main) thread

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,11 +61,11 @@
             android:exported="false">
         </service>
 
-        <receiver android:name=".app.network.receivers.NetworkChangeReceiver" >
-            <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
-            </intent-filter>
-        </receiver>
+        <!--<receiver android:name=".app.network.receivers.NetworkChangeReceiver" >-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>-->
+            <!--</intent-filter>-->
+        <!--</receiver>-->
 
     </application>
 
