basic clean architecture implementation.
two models app and data talk to the domain (usecases).
data cannot directly communicate with app.

work in progress:
- the code compiles but does not work yet. a lot of duplicates between app and other modules because we didnt delete files yet.
- data holds entities from domain for now.
- dagger 2 and dependency injection
- presenter layer
- define BaseUseCase with it's executers

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,9 @@ repositories {
             compile 'de.mindpipe.android:android-logging-log4j:1.0.3'
 
             compile 'log4j:log4j:1.2.17'
+
+            compile 'io.reactivex:rxandroid:1.2.1'
+            compile 'io.reactivex:rxjava:1.1.6'
         }
     }
 }
@@ -95,6 +98,8 @@ repositories {
 dependencies {
     compile project(':xwalk_core_library')
     compile files('libs/xwalk_app_runtime_java.jar')
+    compile project(':data')
+    compile project(':domain')
 }
 
 
