--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,6 @@
+plugins {
+    id "me.tatarka.retrolambda" version "3.2.5"
+}
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
@@ -52,7 +55,7 @@ repositories {
 
             compile 'com.android.support:appcompat-v7:23.1.1'
             compile 'com.android.support:recyclerview-v7:23.1.1'
-            compile 'com.squareup.retrofit:retrofit:1.9.0'
+            compile 'com.squareup.retrofit2:retrofit:2.1.0'
             compile 'com.commonsware.cwac:wakeful:1.0.+'
             compile 'com.android.support:design:23.1.1'
             compile 'com.google.code.gson:gson:2.6.2'
@@ -88,6 +91,10 @@ repositories {
             compile 'de.mindpipe.android:android-logging-log4j:1.0.3'
 
             compile 'log4j:log4j:1.2.17'
+
+            compile 'io.reactivex:rxjava:1.1.8'
+
+            compile 'io.reactivex:rxandroid:1.2.1'
         }
     }
 }
