--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -2,6 +2,5 @@ apply plugin: 'java'
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-
-    compile 'io.reactivex:rxjava:1.1.8'
+    compile project(path: ':domain')
 }
