--- a/data/build.gradle
+++ b/data/build.gradle
@@ -24,10 +24,13 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile project(path: ':domain')
 
+    //RxAndroid
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
 
-    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    //Retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
 
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
