send message works with dagger. uses init SendMessage.init to add message to UseCase.
work in progress:
- a lot of duplicates between app and other modules because we didnt delete files yet.
- data holds entities from domain for now.
- injection of data repository
- presenter layer
- define BaseUseCase with it's executers

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'log4j:log4j:1.2.17'
     compile 'de.mindpipe.android:android-logging-log4j:1.0.3'
+    compile 'javax.inject:javax.inject:1'
 }
