--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':domain', ':data_access', ':presentation'
+include ':app', ':domain', ':data', ':presentation'
 include ':xwalk_core_library'
