--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,13 +1,31 @@
 plugins {
     id "me.tatarka.retrolambda" version "3.2.5"
 }
-apply plugin: 'java'
+apply plugin: 'com.android.library'
 apply plugin: 'me.tatarka.retrolambda'
 
 //noinspection GroovyUnusedAssignment
 sourceCompatibility = 1.8
 //noinspection GroovyUnusedAssignment
 targetCompatibility = 1.8
+
+android {
+    compileSdkVersion 23
+    buildToolsVersion "24.0.0"
+
+    defaultConfig {
+        minSdkVersion 21
+        targetSdkVersion 23
+        versionCode 1
+        versionName "1.0"
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
