domain + data + presenter modules almost work together as defined.
work in progress:
- a lot of duplicates between app and other modules because we didnt delete files yet.
- in domain layer: Message vs. MessageModel
- presenter layer injection
- logger

--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -12,4 +12,5 @@ targetCompatibility = 1.8
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(path: ':domain')
+    compile 'javax.inject:javax.inject:1'
 }
