update circle.yml for java 8

--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,9 @@
 #
 # Build configuration for Circle CI
 #
-
 machine:
+   java:
+       version: oraclejdk8
    environment:
      ANDROID_HOME: /usr/local/android-sdk-linux
 
