fix update circle.yml for java 8

--- a/circle.yml
+++ b/circle.yml
@@ -2,10 +2,12 @@
 # Build configuration for Circle CI
 #
 machine:
-   java:
-       version: oraclejdk8
-   environment:
-     ANDROID_HOME: /usr/local/android-sdk-linux
+  java:
+    version: oraclejdk8
+    
+machine:
+  environment:
+    ANDROID_HOME: /usr/local/android-sdk-linux
 
 dependencies:
   pre:
