fix update circle.yml for java 8 and retrolambda

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -5,6 +5,10 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'me.tatarka.retrolambda'
 
+retrolambda {
+    jdk System.getenv("JAVA8_HOME")
+}
+
 //noinspection GroovyUnusedAssignment
 sourceCompatibility = 1.8
 //noinspection GroovyUnusedAssignment
