--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,10 @@ android {
             testCoverageEnabled = true
         }
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
 
 repositories {
