--- a/xwalk_core_library/build.gradle
+++ b/xwalk_core_library/build.gradle
@@ -8,7 +8,10 @@ android {
         minSdkVersion 14
         targetSdkVersion 21
     }
-
+    dexOptions {
+        // Prevent OutOfMemory with MultiDex during the build phase
+        javaMaxHeapSize "4g"
+    }
     buildTypes {
         release {
             minifyEnabled false
