--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -14,4 +14,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'io.reactivex:rxjava:1.1.8'
     compile 'com.google.code.gson:gson:2.6.2'
+    compile 'javax.inject:javax.inject:1'
+    compile 'com.google.auto.factory:auto-factory:1.0-beta3'
 }
