--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ repositories {
             compile fileTree(dir: 'libs', include: ['*.jar'])
             testCompile 'junit:junit:4.12'
             testCompile "org.robolectric:robolectric:3.0"
-            testCompile "org.mockito:mockito-core:1.+"
+            testCompile "org.mockito:mockito-core:2.1.0-RC.1"
             testCompile "org.hamcrest:hamcrest-junit:2.+"
             androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.3.1'
 
