Added implementation for app's data connectivity state. It includes the appropriate Repository and Interactor to sync to it's state.
Combined it's logic with GPS connectivity status for code reuse.

--- a/data/src/main/AndroidManifest.xml
+++ b/data/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fernandocejas.android10.sample.data">
+    package="com.teamagam.gimelgimel.data">
 
-  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
   <application android:allowBackup="true" />
