--- a/data/build.gradle
+++ b/data/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'javax.inject:javax.inject:1'
+    compile 'com.android.support:support-annotations:24.2.0'
+    compile 'com.android.support:design:24.2.0'
 }
