--- a/data/build.gradle
+++ b/data/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     compile 'javax.inject:javax.inject:1'
     compile 'com.android.support:support-annotations:24.2.0'
     compile 'com.android.support:design:24.2.0'
+    testCompile 'org.mockito:mockito-core:2.1.0-RC.1'
 }
