--- a/data/build.gradle
+++ b/data/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'com.android.support:support-annotations:24.2.0'
     compile 'com.android.support:design:24.2.0'
     testCompile 'org.mockito:mockito-core:2.1.0-RC.1'
+    testCompile 'org.robolectric:robolectric:3.0'
 }
