--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,14 +19,14 @@
         android:required="true" />
 
     <application
-        android:name=".app.common.view.GGApplication"
+        android:name=".app.GGApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.GimelGimel">
         <activity
-            android:name=".app.mainActivity.LauncherActivity"
+            android:name=".app.common.launcher.LauncherActivity"
             android:label="@string/activity_launcher_title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,7 +35,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".app.mainActivity.MainActivity"
+            android:name=".app.mainActivity.view.MainActivity"
             android:configChanges="orientation|screenSize"
             android:label="@string/activity_main_title" />
         <activity
