--- a/circle.yml
+++ b/circle.yml
@@ -1,12 +1,18 @@
 #
 # Build configuration for Circle CI
 #
+
+general:
+    artifacts:
+        - /home/ubuntu/gimelgimel/app/build/outputs/apk/
+
 machine:
     java:
-        version: oraclejdk8
+        version: openjdk8
     environment:
         ANDROID_HOME: /usr/local/android-sdk-linux
         JAVA8_HOME:   /usr/lib/jvm/java-8-oracle
+        JAVA7_HOME:   /usr/lib/jvm/java-7-openjdk-amd64
 
 dependencies:
   pre:
@@ -14,6 +20,9 @@ dependencies:
     - echo y | android update sdk --no-ui --all --filter "tools,platform-tools,android-23"
     - echo y | android update sdk --no-ui --all --filter "build-tools-23.0.2"
     - echo y | android update sdk --no-ui --filter build-tools-24.0.0,android-24,extra-android-m2repository
+  cache_directories:
+    - ~/.android
+#    - ~/android
 
 test:
   override:
