--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,95 +1,70 @@
 allprojects {
-  repositories {
-    jcenter()
-  }
+    repositories {
+        jcenter()
+    }
 }
 
 ext {
-  //Android
-  androidBuildToolsVersion = "23.0.2"
-  androidMinSdkVersion = 23
-  androidTargetSdkVersion = 23
-  androidCompileSdkVersion = 23
-  androidVersionCode = 1
-  androidVersionName = "1.0"
+    //Android
+    androidBuildToolsVersion = "23.0.2"
+    androidMinSdkVersion = 23
+    androidTargetSdkVersion = 23
+    androidCompileSdkVersion = 23
+    androidVersionCode = 1
+    androidVersionName = "1.0"
+    androidApplicationId = "com.teamagam.gimelgimel"
 
-  androidSupportVersion = '24.2.0'
+    androidSupportVersion = '24.2.0'
 
-  //Libraries
-  dependencies = [
+    //Libraries
+    dependencies = [
 
-          gson:               'com.google.code.gson:gson:2.6.2',
-          autoFactoryCompiler: "com.google.auto.factory:auto-factory:1.0-beta3",
-          rxAndroid:          'io.reactivex:rxandroid:1.2.1',
-          rxJava:             'io.reactivex:rxjava:1.1.6',
-          javaxInject:        'javax.inject:javax.inject:1',
+        //Android
+        androidAnnotations   : "com.android.support:support-annotations:${androidSupportVersion}",
+        androidSupportV4     : "com.android.support:support-v4:${androidSupportVersion}",
+        recyclerview         : "com.android.support:recyclerview-v7:${androidSupportVersion}",
+        androidDesign        : "com.android.support:design:${androidSupportVersion}",
+        slideUpPannel        : 'com.sothree.slidinguppanel:library:3.3.0',
+        butterKnife          : "com.jakewharton:butterknife:8.0.1",
+        butterKnifeCompiler  : 'com.jakewharton:butterknife-compiler:8.0.1',
 
-          //Retrofit
-          retrofit:           'com.squareup.retrofit2:retrofit:2.0.2',
-          retrofitRxAdapter:  'com.squareup.retrofit2:adapter-rxjava:2.1.0',
-          okHttpLogging:      'com.squareup.okhttp3:logging-interceptor:3.0.1',
-          retrofitGsonConverter:'com.squareup.retrofit2:converter-gson:2.0.0',
+        //Rx
+        rxAndroid            : 'io.reactivex:rxandroid:1.2.1',
+        rxJava               : 'io.reactivex:rxjava:1.1.6',
 
-          //Android
-          androidAnnotations: "com.android.support:support-annotations:${androidSupportVersion}",
-          androidSupportV4:   "com.android.support:support-v4:${androidSupportVersion}"
-  ]
+        //Retrofit
+        retrofit             : 'com.squareup.retrofit2:retrofit:2.0.2',
+        retrofitRxAdapter    : 'com.squareup.retrofit2:adapter-rxjava:2.1.0',
+        okHttpLogging        : 'com.squareup.okhttp3:logging-interceptor:3.0.1',
+        retrofitGsonConverter: 'com.squareup.retrofit2:converter-gson:2.0.0',
+        gson                 : 'com.google.code.gson:gson:2.6.2',
 
-  testDependencies = [
-          junit:              'junit:junit:4.12',
-          mockito:            'org.mockito:mockito-core:2.2.9',
-          roboelectric:       'org.robolectric:robolectric:3.0',
+        //Dagger
+        dagger               : 'com.google.dagger:dagger:2.2',
+        daggerCompiler       : 'com.google.dagger:dagger-compiler:2.2',
+        javaxAnnotations     : 'javax.annotation:jsr250-api:1.0',
+        javaxInject          : 'javax.inject:javax.inject:1',
+        autoFactoryCompiler  : "com.google.auto.factory:auto-factory:1.0-beta3",
 
-  ]
+        //Fresco
+        fresco               : 'com.facebook.fresco:fresco:0.10.0',
+        frescoAnimatedGif    : 'com.facebook.fresco:animated-gif:0.10.0',
 
-//  //Development
-//  leakCanaryVersion = '1.3.1'
-//
-//  presentationDependencies = [
-//      daggerCompiler:     "com.google.dagger:dagger-compiler:${daggerVersion}",
-//      dagger:             "com.google.dagger:dagger:${daggerVersion}",
-//      butterKnife:        "com.jakewharton:butterknife:${butterKnifeVersion}",
-//      recyclerView:       "com.android.support:recyclerview-v7:${recyclerViewVersion}",
-//      rxJava:             "io.reactivex:rxjava:${rxJavaVersion}",
-//      rxAndroid:          "io.reactivex:rxandroid:${rxAndroidVersion}",
-//      javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-//  ]
-//
-//  presentationTestDependencies = [
-//      mockito:            "org.mockito:mockito-core:${mockitoVersion}",
-//      dexmaker:           "com.google.dexmaker:dexmaker:${dexmakerVersion}",
-//      dexmakerMockito:    "com.google.dexmaker:dexmaker-mockito:${dexmakerVersion}",
-//      espresso:           "com.android.support.test.espresso:espresso-core:${espressoVersion}",
-//      testingSupportLib:  "com.android.support.test:testing-support-lib:${testingSupportLibVersion}",
-//  ]
-//
+        //log4j
+        log4jLogging         : 'de.mindpipe.android:android-logging-log4j:1.0.3',
+        log4jAppache         : 'log4j:log4j:1.2.17',
+    ]
 
+    testDependencies = [
+            junit       : 'junit:junit:4.12',
+            mockito     : 'org.mockito:mockito-core:2.2.9',
+            roboelectric: 'org.robolectric:robolectric:3.0',
+            robotium    : 'com.jayway.android.robotium:robotium-solo:5.3.1'
 
-//  domainTestDependencies = [
-//      junit:              "junit:junit:${jUnitVersion}",
-//      mockito:            "org.mockito:mockito-core:${mockitoVersion}",
-//  ]
-//
-//  dataDependencies = [
-//      daggerCompiler:     "com.google.dagger:dagger-compiler:${daggerVersion}",
-//      dagger:             "com.google.dagger:dagger:${daggerVersion}",
-//      okHttp:             "com.squareup.okhttp:okhttp:${okHttpVersion}",
-//      gson:               "com.google.code.gson:gson:${gsonVersion}",
-//      rxJava:             "io.reactivex:rxjava:${rxJavaVersion}",
-//      rxAndroid:          "io.reactivex:rxandroid:${rxAndroidVersion}",
-//      javaxAnnotation:    "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-//      javaxInject:        "javax.inject:javax.inject:${javaxInjectVersion}",
-//      androidAnnotations: "com.android.support:support-annotations:${androidAnnotationsVersion}"
-//  ]
-//
-//  dataTestDependencies = [
-//      junit:              "junit:junit:${jUnitVersion}",
-//      assertj:            "org.assertj:assertj-core:${assertJVersion}",
-//      mockito:            "org.mockito:mockito-core:${mockitoVersion}",
-//      robolectric:        "org.robolectric:robolectric:${robolectricVersion}",
-//  ]
-//
+    ]
+
 //  developmentDependencies = [
 //      leakCanary: "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}",
 //  ]
+
 }
