1. collected all the dependencies to one location 2. compatibility with offline work using 'dependencies' folder and  python script 3.

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,8 +1,7 @@
-plugins {
-    id "me.tatarka.retrolambda" version "3.2.5"
-}
 apply plugin: 'com.android.library'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: "net.ltgt.apt"
+
 
 //noinspection GroovyUnusedAssignment
 sourceCompatibility = 1.8
