--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,16 @@ apply from: 'dependencies.gradle'
 
 buildscript {
     repositories {
+        maven { url "https://plugins.gradle.org/m2/"}
+        maven { url 'dependencies' }
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.2'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-    }
-}
-
-allprojects {
-    repositories {
-        jcenter()
+        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+        classpath "net.ltgt.gradle:gradle-apt-plugin:0.8"
     }
 }
 
