--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,7 @@ android {
             events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
         }
     }
+    buildToolsVersion '24.0.1'
 }
 
 
